--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,54 @@
-# Python bytecode
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Virtual environments
+*.so
+.Python
+env/
 venv/
 .venv/
 ENV/
-env/
-
-# Distribution / packaging
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
 
-# IDEs and editors
+# Virtual Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
-# Environment variables
-.env
-.env.*
-
-# Logs and reports
-*.log
-.coverage
-.pytest_cache/
-
-# OS files
+# OS
 .DS_Store
 Thumbs.db
 desktop.ini
+
+# Flask
+instance/
+.webassets-cache
+
+# Logs
+*.log
 
